feat: добавил кнопку выхода v.6

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,8 +19,18 @@ dependencies:
   csv: ^5.0.0
   pdf: ^3.8.1
   printing: ^5.9.0
+
   digital_diary_app:
     path: ../digital_diary_app
+
+  nutrition_tracker:
+    path: ../nutrition_tracker
+
+  planner_app:
+    path: ../planner_app
+
+  workout_app:
+    path: ../workout_app
 
 dev_dependencies:
   flutter_test:
