--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,8 @@ dependencies:
   csv: ^5.0.0
   pdf: ^3.8.1
   printing: ^5.9.0
+  intl: ^0.20.2
+  provider: ^6.1.5
 
   digital_diary_app:
     path: ../digital_diary_app
